src/test/ui/type-alias-impl-trait/generic_duplicate_param_use.stderr
error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use.rs:16:5
   |
LL |     t
   |     ^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
help: consider restricting type parameter `U`
   |
LL | type TwoTys<T, U: std::fmt::Debug> = impl Debug;
   |                 +++++++++++++++++

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:16:5
   |
LL |     t
   |     ^
   |
note: type used multiple times
  --> $DIR/generic_duplicate_param_use.rs:8:13
   |
LL | type TwoTys<T, U> = impl Debug;
   |             ^  ^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:22:5
   |
LL |     t
   |     ^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_param_use.rs:10:19
   |
LL | type TwoLifetimes<'a, 'b> = impl Debug;
   |                   ^^  ^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_param_use.rs:27:5
   |
LL |     t
   |     ^
   |
note: constant used multiple times
  --> $DIR/generic_duplicate_param_use.rs:12:16
   |
LL | type TwoConsts<const X: usize, const Y: usize> = impl Debug;
   |                ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
